@@ -134,6 +134,13 @@ public:
   Ipv6InterfaceAddress::Scope_e GetScope () const;
 
   /**
+   * \brief Checks if the address is in the same subnet.
+   * \param b the address to check
+   * \return true if the address is in the same subnet.
+   */
+  bool IsInSameSubnet (Ipv6Address b) const;
+
+  /**
    * \brief Set the latest DAD probe packet UID.
    * \param uid packet uid
    */
